--- a/.github/workflows/SBOM.yml
+++ b/.github/workflows/SBOM.yml
@@ -1,6 +1,30 @@
-- name: Generate Python SBOM
-  uses: CycloneDX/gh-python-generate-sbom@v2
-  with:
-    input: ./requirements.txt
-    output: ./bom.json
-    format: json
+name: Create Sbom
+
+on:
+  push:
+  workflow_dispatch:
+
+
+jobs:
+  sbom:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Install CycloneDX Python tool
+        run: |
+          pip3 install 'cyclonedx-bom>=1.4.0,<4'
+
+      - name: Generate Python SBOM
+        uses: CycloneDX/gh-python-generate-sbom@v2
+        with:
+          input: ./requirements.txt
+          output: ./bom.json
+          format: json
+
+      - name: Upload SBOM as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: sbom-json
+          path: ./bom.json
