--- a/.github/workflows/RunUnitTests.yml
+++ b/.github/workflows/RunUnitTests.yml
@@ -2,7 +2,10 @@ name: Run Tests
 
 on:
   push:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+      - develop
 
 jobs:
   test:
